# collections

./: .gitignore  CMakeLists.txt  LICENSE  README.md  classes.html  collections_8f90_source.html  files.html  fpm.toml  index.html  namespacecollections.html  namespaces.html  namespaces_dup.js  structcollections_1_1container.html  structcollections_1_1linked__list.js  structcollections_1_1list-members.html
.github/workflows/: cmake.yml  fpm.yml
configure/: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/ferror/: CMakeLists.txt
doc/: Doxyfile
doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions_func.html  inherit_graph_0.dot  inherit_graph_2.dot  namespacecollections.js  navtreedata.js  navtreeindex0.js  structcollections_1_1linked__list.html  structcollections_1_1node__coll__graph.dot
doc/html/search/: functions_3.js
docs/: Doxyfile
docs/html/: annotated.html  annotated_dup.js  classes.html  collections_8f90_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_1.dot  inherits.html  menudata.js  namespacecollections.html  namespaces.html  navtreedata.js  navtreeindex0.js  structcollections_1_1container-members.html  structcollections_1_1container.js  structcollections_1_1container__inherit__graph.dot  structcollections_1_1linked__list-members.html  structcollections_1_1linked__list.html  structcollections_1_1linked__list.js  structcollections_1_1list-members.html  structcollections_1_1list.html  structcollections_1_1list.js  structcollections_1_1node-members.html  structcollections_1_1node.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_a.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  namespaces_0.js  searchdata.js
examples/: CMakeLists.txt  linked_list_example.f90  list_example.f90
install/: collectionsConfig.cmake.in  template.pc
search/: all_0.js  all_4.js  classes_2.js  functions_0.js  functions_1.js  functions_7.js  pages_0.js
src/: CMakeLists.txt  collections.f90  collections_container.f90  collections_linked_list.f90  collections_list.f90  flist.f90  flist_container.f90  flist_linked_list.f90  flist_list.f90
test/: CMakeLists.txt  collections_test.f90  linked_list_test.f90  list_test.f90
tests/: CMakeLists.txt  linked_list_test.f90  list_test.f90
